# server/docs/swagger.json
@@ -24,7 +24,16 @@
                 "responses": {}
             }
         },
-        "/problem/add": {
+        "/problems": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "list problems",
+                "responses": {}
+            }
+        },
+        "/problems/add": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -66,7 +75,7 @@
                 "responses": {}
             }
         },
-        "/problem/delete": {
+        "/problems/delete": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -87,37 +96,7 @@
                 "responses": {}
             }
         },
-        "/problem/fetch": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "fetch an existed problem",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "problem id",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/problem/list": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "list problems",
-                "responses": {}
-            }
-        },
-        "/problem/submit": {
+        "/problems/submit": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -158,7 +137,7 @@
                 "responses": {}
             }
         },
-        "/problem/update": {
+        "/problems/update": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -207,28 +186,28 @@
                 "responses": {}
             }
         },
-        "/submission/fetch": {
-            "post": {
+        "/problems/{id}": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "submit code",
+                "summary": "fetch an existed problem",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "submission id",
+                        "description": "problem id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
                 "responses": {}
             }
         },
-        "/submission/rejudge": {
+        "/submissions/rejudge": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -249,28 +228,28 @@
                 "responses": {}
             }
         },
-        "/user/fetch": {
-            "get": {
+        "/submissions/{id}": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "fetch user info",
+                "summary": "submit code",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "user ID",
+                        "description": "submission id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
                 "responses": {}
             }
         },
-        "/user/login": {
+        "/users/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -298,7 +277,7 @@
                 "responses": {}
             }
         },
-        "/user/logout": {
+        "/users/logout": {
             "delete": {
                 "produces": [
                     "application/json"
@@ -307,7 +286,7 @@
                 "responses": {}
             }
         },
-        "/user/me": {
+        "/users/me": {
             "get": {
                 "produces": [
                     "application/json"
@@ -316,7 +295,7 @@
                 "responses": {}
             }
         },
-        "/user/register": {
+        "/users/register": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -352,6 +331,27 @@
                         "description": "confirmation password",
                         "name": "password_confirm",
                         "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "fetch user info",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
